[SPARK] enabled log info and reduced size image