@@ -13,10 +13,13 @@ RUN wget http://mirror.olnevhost.net/pub/apache/maven/maven-3/3.3.9/binaries/apa
 ENV M2_HOME /usr/local/apache-maven-3.3.9
 
 # SPARK 1.6.1
-ENV MAVEN_OPTS "-Xmx2g -XX:MaxPermSize=512M -XX:ReservedCodeCacheSize=512m"
-RUN git clone https://github.com/ElfoLiNk/spark.git && \
-    cd spark && ./dev/change-scala-version.sh 2.11 && build/mvn -Pyarn -Phadoop-2.6 -Dhadoop.version=2.7.2 -Dscala-2.11 -Dmaven.test.skip=true  -DskipTests --quiet clean package && cd .. && \
-    sudo mv spark /usr/local/spark && echo 'spark.eventLog.enabled true' >> /usr/local/spark/conf/spark-defaults.conf
+ENV MAVEN_OPTS "-Xmx2g -XX:ReservedCodeCacheSize=512m"
+RUN git clone https://github.com/ElfoLiNk/spark.git --depth=1 --branch=branch-1.6 && \
+    cd spark && ./dev/change-scala-version.sh 2.11 && \
+    ./make-distribution.sh --name docker --tgz -Pyarn -Phadoop-2.6 -Dhadoop.version=2.7.2 -Dscala-2.11 -Dmaven.test.skip=true -DskipTests --quiet clean package && \
+    sudo tar -xf spark-*.tgz -C /usr/local/ && sudo mv /usr/local/spark-* /usr/local/spark && \
+    cd .. && rm -rf spark && \
+    echo 'spark.eventLog.enabled true' >> /usr/local/spark/conf/spark-defaults.conf && mv /usr/local/spark/conf/log4j.properties.template /usr/local/spark/conf/log4j.properties
 ENV SPARK_HOME /usr/local/spark
 ENV PATH $PATH:$SPARK_HOME/bin
 
